--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,7 +33,8 @@ dependencies {
     compile "org.jetbrains.anko:anko-common:$anko_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
-
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.20'
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
     compile 'com.google.code.gson:gson:2.8.0'
 
     testImplementation 'junit:junit:4.12'
