--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.anko_version='0.10.3'
 
     ext.support_version='25.0.0'
+    ext.dokka_version='0.9.15'
 
     repositories {
         google()
@@ -13,6 +14,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
